2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (main): Apply DEBUG flag for MHD.
	(request_handler): Fix typo.

2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (request_handler): Fix call of gsad_newtask,
	use g_strconcat.
	(gsad_init): Init glib.
	(main): Adjust logging to avoid recursion.

2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (send_http_authenticate_header): New.

2009-10-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (gsad_cleanup, main): Factored out pidfile management.

2009-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (request_handler): New.

2009-10-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/p_bar_bg.png, src/html/src/img/p_bar_done.png,
	src/html/src/img/p_bar_error.png, src/html/src/img/p_bar_new.png,
	src/html/src/img/p_bar.png, src/html/src/img/p_bar_request.png,
	src/html/src/img/trend_down.png, src/html/src/img/trend_less.png,
	src/html/src/img/trend_more.png, src/html/src/img/trend_nochange.png,
	src/html/src/img/trend_up.png: New.

2009-10-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (gsad_init): New.

2009-10-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (main): omp_init splits into omp_init and oap_init.
	(gsad_cleanup): New.

2009-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad-oap.h: New.

	* src/gsad-base.h: New.

	* src/tracef.h: New.

	* src/CMakeLists.txt: Handle modules gsad-omp and gsad-oap.

2009-10-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION: New.

	* src/gsad_log_conf.cmake_in: New.

	* src/CMakeLists.txt: New.

	* src/html/src/img/rpm.png, src/html/src/img/exe.png,
	src/html/src/img/key.png, src/html/src/img/deb.png: New.

	* gsad.c: New.

2009-10-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/new.png: New.
