@@ -14,3 +14,4 @@ level=128
 prepend=%t %p
 prepend_time_format=%Y-%m-%d %Hh%M.%S %Z
 file=${OPENVAS_LOG_DIR}/gsad.log
+level=0
