@@ -1,5 +1,13 @@
 2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* VERSION, CMakeLists.txt: Increased from 0.7.2.SVN to 0.7.3.SVN.
+
+	* src/gsad_log_conf.cmake_in: Added "level".
+
+	* src/CMakeLists.txt: Better handling of compile flags.
+
+2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* src/gsad.c (main): Apply DEBUG flag for MHD.
 	(request_handler): Fix typo.
 
